<resources>
    <string name="app_name">Mumba E-Mart</string>
    <string name="my_grocery">my_grocerry</string>
    <string name="my_orders">my_orders</string>
    <string name="my_rewards">my_rewards</string>
    <string name="my_cart">my_cart</string>
    <string name="my_wishlist">my_wishlist</string>
    <string name="my_account">my_account</string>
    <string name="todo">todo</string>
    <string name="email_address">email_address</string>
    <string name="not_signed_in">not_signed</string>
    <string name="navigation_header">navigation_header</string>
    <string name="search">search</string>
    <string name="notification">notification</string>
    <string name="cart">cart</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="_1kg_pouch">1kg Pouch</string>
    <string name="_17">₹17</string>
    <string name="deals_of_the_day">Deals of the Day!</string>
    <string name="view_all">View all</string>
    <string name="specification">Specification</string>
    <string name="description">Description</string>
    <string name="other_details">other details</string>
    <string name="features_name">features name</string>
    <string name="feature_value">feature value</string>
    <string name="lorem_ipsum_dolor_sit_amet_eu_diam_scripta_facilis_erat_persequerts_concludaturque_n_usu_vidit_nominatti_completitur_expri_mundi_albucius_elaboraret_id">Lorem ipsum dolor sit amet, eu diam scripta facilis erat persequerts concludaturque n, usu vidit nominatti completitur expri mundi albucius elaboraret id.</string>
    <string name="product_details">Product_Details</string>
    <string name="total_ratings">total ratings</string>
    <string name="rs_121">Rs.121/-</string>
    <string name="rs_180">Rs.180/-</string>
    <string name="available">Available</string>
    <string name="title">Title</string>
    <string name="tata_salt_was_launched_in_1983_by_tata_chemicals_as_india_s_first_packaged_iodised_salt_brand_the_brand_is_now_the_biggest_packaged_salt_brand_in_india_with_a_market_share_of_17_the_market_for_packaged_iodized_salt_in_india_is_estimated_to_be_worth_rs_21_7_billion_with_tata_salt_commanding_a_sales_share_of_rs_3_74_billion_or_17_3_of_the_market_domestic_competitors_include_annapurna_captain_cook_i_shakti_nirma_shudh_and_aashirvaad_however_major_competition_is_only_given_by_surya_salt_which_holds_the_second_largest_market_share_after_tata_salt">Tata Salt was launched in 1983 by Tata Chemicals as India\'s first packaged iodised salt brand. The brand is now the biggest packaged salt brand in India, with a market share of 17%.The market for packaged iodized salt in India is estimated to be worth Rs. 21.7 billion, with Tata Salt commanding a sales share of Rs 3.74 billion or 17.3% of the market. Domestic competitors include Annapurna, Captain Cook, i-shakti, Nirma Shudh and Aashirvaad.However major competition is only given by Surya Salt which holds the second largest market share after Tata Salt</string>
    <string name="ratings">Ratings</string>
    <string name="_4_5">4.5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="check_price_after_coupen_redemption">Check price after coupen redemption</string>
    <string name="redeem">Redeem</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="offers_applied">offers applied</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="pincode">Pincode</string>
    <string name="john_doe">John Doe</string>
    <string name="darshan_bane">Darshan Bane</string>
    <string name="banedarshan007_gmail_com">banedarshan007@gmail.com</string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery email sent successfully ! Check your Inbox.</string>
</resources>