<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_grocery"
            android:icon="@drawable/ic_baseline_storefront_24"
            android:title="@string/my_grocery" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_local_mall_24"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@drawable/ic_baseline_redeem_24"
            android:title="@string/my_rewards" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/cart"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/my_wishlist" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/my_account" />
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/sign_out"
        android:title="Sign Out"/>
</menu>