<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/sign_up_color"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:elevation="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ratings"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/average_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4_5"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/average_rating_star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"
            app:tint="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="27 ratings"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/ratings_progressbar_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/total_ratings">

        <ProgressBar
            android:id="@+id/packed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="@color/successGreen" />

        <ProgressBar
            android:id="@+id/shipped_delivered_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="@color/successGreen" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="#ffbb00" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="#ffbb00" />

        <ProgressBar
            android:id="@+id/progressBar5"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="#ff0000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ratings_progressbar_container"
        app:layout_constraintEnd_toStartOf="@+id/ratings_progressbar_container"
        app:layout_constraintTop_toBottomOf="@+id/total_ratings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="4dp"
                app:srcCompat="@drawable/star"
                app:tint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="4dp"
                app:srcCompat="@drawable/star"
                app:tint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="4dp"
                app:srcCompat="@drawable/star"
                app:tint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="4dp"
                app:srcCompat="@drawable/star"
                app:tint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="4dp"
                app:srcCompat="@drawable/star"
                app:tint="#000000" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ratings_numbers_container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ratings_progressbar_container"
        app:layout_constraintStart_toEndOf="@+id/ratings_progressbar_container"
        app:layout_constraintTop_toBottomOf="@+id/total_ratings">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="12"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="12"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="12"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/ratings_numbers_container"
        app:layout_constraintStart_toStartOf="@+id/ratings_numbers_container"
        app:layout_constraintTop_toBottomOf="@+id/ratings_numbers_container" />

    <TextView
        android:id="@+id/total_ratings_figure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="27"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/ratings_numbers_container"
        app:layout_constraintStart_toStartOf="@+id/ratings_numbers_container"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/tv_your_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Your ratings"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_ratings_figure" />

    <LinearLayout
        android:id="@+id/rate_now_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_ratings"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"
            app:tint="#bebebe" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"
            app:tint="#bebebe" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"
            app:tint="#bebebe" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"
            app:tint="#bebebe" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"
            app:tint="#bebebe" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>